# win-rust-client

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  env.example
agent/: Cargo.toml  build.jsonl  tauri.conf.json
agent/.cargo/: config.toml
agent/patches/browser-url/: Cargo.toml  LICENSE  README.md
agent/patches/browser-url/examples/: basic_usage.rs
agent/patches/browser-url/src/: browser_detection.rs  error.rs  lib.rs  url_extraction.rs
agent/patches/browser-url/src/platform/: windows.rs
agent/src/: capture.rs  config.rs  input.rs  keylogger.rs  main.rs  system_info.rs  ui.rs  url_scraper.rs  window_tracker.rs
agent/ui-src/: package-lock.json
agent/ui-src/src/: App.tsx
agent/wix/fragments/: run-at-logon.wxs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityTab.tsx  DataTable.tsx  KeysTab.tsx  LoginPage.tsx  OverviewGrid.tsx  ScreenTab.tsx  Sidebar.tsx  UrlsTab.tsx  WindowsTab.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
server/: Cargo.toml  Dockerfile
server/migrations/: 0001_init.sql  0002_agent_sessions.sql  0003_agent_info.sql
server/src/: api.rs  auth.rs  db.rs  main.rs  state.rs  ws_agent.rs  ws_viewer.rs
server/static/: index.html
